ho========================
   beancount: CHANGES
========================
Note: This file contains a list changes in the 'master' branch.


2020-07-06

 - Updated export script to honor lowercase "ignore" instead of "IGNORE" and set
   default tax type to "taxable" instead of "TAXABLE" so that changes in PR 472
   don't pick up the metadata as currencies.


2020-07-05

 - Moved beancount.web.scrape to beancount.utils.scrape in preparation of
   removing beancount.web.
 - Removed experiments/portfolio for its dependency on beancount.reports code
   (this script was obsolete anyway).
 - Moved get_assets_holdings() function out of reports code to preserve it for
   use by an experimental script (in preparation for removing beancount.reports).
 - Moved beancount.scripts.tutorial to beancount.reports.tutorial in preparation
   of removing beancount.reports and beancount.web.
 - Moved beancount.reports.context to beancount.parser.context in preparation of
   removing beancount.reports and beancount.web.
 - Moved beancount.reports.table to beancount.utils.table in preparation of
   removing beancount.reports and beancount.web.


2020-07-04

  - Fixed #494, invalid account used for clamping the period view
    (Equity:Conversions:Previous instead of Equity:Conversions:Current).


2020-06-27

  - Merged PR #484, some parser improvements by @dnicolodi.
  - Merged PR #488 from branch beancount/pr135_ppmarciniak_fixnetworth by
    @pmarciniak.
  - Merged branch pr131_tohojo_csvtweaks (BitBucket PR 131) by @tohojo, fixed
    encoding bug in reading the file for the date and allow customizing the
    number parser.


2020-06-26

  - Merged #480 - parser: Read input data from Python file objects by dnicolodi.


2020-06-10

  - Released 2.3.0. See #459.


2020-06-03

 - Added a 'hooks' argument to beancount.ingest.scripts_utils.ingest() replacing
   'detect_duplicates_func'. 'find_duplicate_entries()' is still inserted if no